<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_rss_chanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ifmo.rain.mikhailov.rss_client.settings.EditRssChanel">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_rss_name"
        android:height="20dp"/>
    <EditText
        android:id="@+id/editRssName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_rss"
        android:height="20dp"/>
    <EditText
        android:id="@+id/editRss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:height="20dp"/>
    <Button
        android:id="@+id/endOfEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onMyButtonClick"
        android:text="@string/save_changes"/>

</LinearLayout>
